# fabric-language-c

./: .gitignore  build.gradle
FabricLangC/: Bridge.h  CMakeLists.txt  class_builder.c  class_builder.h  fabriclangC.c  fabriclangC.h
src/main/java/io/github/hydos/fabriclangc/: Bootstrap.java  CBridge.java  CLanguageAdapter.java  JavaInteraction.java  NativeFunctionBridge.java  NativeModInitializer.java  TestClass.java
src/main/java/io/github/hydos/fabriclangc/bridge/: CBridge.java  JavaInteraction.java
src/main/java/io/github/hydos/fabriclangc/util/: ZipUtils.java
src/main/resources/: fabric.mod.json
